--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     font-family: Graphik, Helvetica, Tahoma, Arial, sans-serif;
 }
 
+body{
+   background-color:#FFFFFF;
+}
+
+
 .top{
     width: 100%;
     height: 40%;
@@ -13,10 +18,31 @@
 
 .nav{
     width: 100%;
-    height: 10%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.nav-right{
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
+.nav-left{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.nav a{
+    text-decoration: none;
+    color: #000000;
+    font-size: 20px;
 }
 
 .logo{
@@ -26,11 +52,101 @@
 
 .main{
     width: 100%;
-    height: 90%;
+    height: 100%;
+    border-bottom: 1px solid black;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 20px;
+    margin-bottom: 80px;
+}
+
+.img-1, .img-2, .img-3{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1{
     font-size: 40px;
     text-align: center;
     margin-top: 50px;
+}
+
+h3{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.images{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.images img{
+    width: 200px;
+    height: auto;
+    margin-top: 80px;
+}
+
+.images p{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footer-container{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    font-size: 20px;
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.footer-container button{
+    height: 50px;
+    padding: 0 30px;
+    border: 2px solid #000;
+    border-radius: 40px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+    background-color: white;
+    color: black;           
+    font-weight: 600;         
+    cursor: pointer; 
+}
+.footer-container button:hover{
+    background-color: white;
+    color: #000;
+}
+
+.footer-container a{
+    text-decoration: none;
+    color: #000000;
+    font-size: 20px;
+}
+
+.footer-right{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
+.footer-left{
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
